--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 sql.url=jdbc:postgresql://localhost:5432/postgres
 sql.user=postgres
 sql.password=ghjwtyrj hjvf
-sql.driver=org.postgresql.Driver
+sql.driver=org.postgresql.Driver\
 pg.datasource.url=jdbc:postgresql://localhost:5432/postgres
 pg.datasource.username=postgres
 pg.datasource.password=ghjwtyrj hjvf
