--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 #postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=ghjwtyrj hjvf
 spring.datasource.driver-class-name=org.postgresql.Driver
-sql.url=jdbc:postgresql://localhost:5432/postgres
-sql.user=postgres
-sql.password=ghjwtyrj hjvf
-sql.driver=org.postgresql.Driver\
-pg.datasource.url=jdbc:postgresql://localhost:5432/postgres
-pg.datasource.username=postgres
-pg.datasource.password=ghjwtyrj hjvf
-pg.datasource.driver-class-name=org.postgresql.Driver
-
+#spring.security.user.name=Roma
+#spring.security.user.password=ghjwtyrj hjvf
+mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.type-aliases-package=com.example.springhelloworld.structs
